public class Customer extends User {
    public Customer(Bank bank, String firstName, String lastName, String email, String password, String personalCode) {
        super(bank, firstName, lastName, email, password);
    }
}
