@startuml

title Back-end - Class Diagram

class Bank {
    id: String

    customers: Customer[]
    admins: Administrator[]
    transactions: Transaction[]
    accounts: Account[]
    traces: Trace[]
    bankAccount: Account

    Bank getInstance() // Singleton pattern
    
    Customer createCustomer(...) // Factory pattern
    Customer[] getCustomers()
    Customer updateCustomer(Customer)
    void setCustomers(Customer[])
    
    Administrator createAdministrator(...) // Factory pattern
    Administrator[] getAdministrators()
    void setAdministrators(Administrator[])
    
    User authenticate(email: String, password: String)

    Transaction createTransaction(...) // Factory pattern
    void revokeTransaction(Administrator, Transaction)
}

class User {
    bank: Bank
    id: String
    firstName: String
    lastName: String
    email: String
    password: String

    Boolean validate()
}

class Customer {
}

class Administrator {
}

class Account {
    bank: Bank
    id: String
    user: User
    currency: Enum
    balance: Double

    Transaction[] getTransactions()
}

class Transaction {
    bank: Bank
    id: String
    source: Account
    destination: Account
    currency: Enum
    amount: Double
    description: String
    status: Enum
    rejectionDescription: String
    timestamp: Datetime

    void execute()
    Boolean validate()
    Trace[] getTraces()
}

class Trace {
    id: String
    bankId: Bank
    transactionId: String
    transactionStatus: Enum
    userId: String
    timestamp: Datetime
}

class Datastore {
    filename: String

    Datastore getInstance() // Singleton pattern
    void saveBank(Bank)
    Bank loadBank(filename: String)
}

Bank o-- Customer
Bank o-- Administrator
Bank o-- Transaction
Bank o-- Account
Bank o-- Trace
User <|-- Customer
User <|-- Administrator
User "1" -- "1" Account
Transaction "n" -- "2" Account
Transaction "1" -- "n" Trace
User "1" -- "n" Trace

@enduml